--- a/index.html
+++ b/index.html
@@ -1,84 +1,116 @@
 
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Street Dog Seva</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>JeevMitra.org – Karuna aur Seva</title>
   <style>
-    body {
-      font-family: sans-serif;
-      background-color: #fff8e1;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      text-align: center;
+    body { font-family: Arial, sans-serif; margin: 0; background-color: #fffdf7; color: #333; }
+    header { background-color: #6B8E23; color: white; padding: 40px 20px; text-align: center; }
+    header h1 { margin: 0; font-size: 2.8em; }
+    header p { font-size: 1.2em; margin-top: 10px; }
+    section { padding: 40px 20px; text-align: center; }
+    .donate-section { background-color: #fff3e0; }
+    .donate-section img { width: 220px; border-radius: 10px; border: 1px solid #ccc; }
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 14px 30px;
+      background-color: #4CAF50;
+      color: white;
+      text-decoration: none;
+      font-size: 1.1em;
+      border-radius: 5px;
     }
-    header {
-      background-color: #ffcc00;
-      padding: 20px;
-    }
-    header h1 {
-      margin: 0;
-    }
-    .section {
-      padding: 20px;
-    }
-    .images img {
-      max-width: 300px;
-      width: 90%;
-      margin: 10px;
+    .gallery { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; padding: 10px; }
+    .gallery img {
+      width: 200px;
+      height: auto;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .donate {
-      background-color: #fff3e0;
-      padding: 20px;
-    }
-    .donate-btn {
-      background-color: #ff5722;
-      color: white;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 8px;
-      font-size: 18px;
-      margin-top: 10px;
+      object-fit: cover;
     }
     footer {
-      background-color: #ffe082;
+      background-color: #333;
+      color: white;
+      padding: 20px;
+      font-size: 0.9em;
+      text-align: center;
+    }
+    footer a { color: #fff; text-decoration: underline; }
+    table.donor-table {
+      margin: 20px auto;
+      border-collapse: collapse;
+      width: 90%;
+    }
+    table.donor-table th, table.donor-table td {
+      border: 1px solid #ccc;
       padding: 10px;
+      text-align: center;
+    }
+    table.donor-table th {
+      background-color: #f4f4f4;
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>🐾 Street Dog Seva</h1>
-  <p>गर्मी में प्यासे और भूखे जानवरों की मदद करें 🙏</p>
+  <h1>JeevMitra.org</h1>
+  <p>Karuna se Bandhe Jaan, Har Daan ki Pehchaan</p>
 </header>
 
-<div class="section">
-  <h2>🙏 आपका छोटा योगदान, एक जीवन बचा सकता है</h2>
-  <p>Donate via UPI: <strong>7357897775@ptyes</strong></p>
-  <button class="donate-btn" onclick="window.location.href='upi://pay?pa=7357897775@ptyes&pn=Animal+Seva&cu=INR'">
-    📲 Donate Now
-  </button>
-</div>
+<section id="about">
+  <h2>About JeevMitra</h2>
+  <p>JeevMitra ek seva yatra hai jisme hum gaaye, kutte, pakshi aur sab praniyon ke liye bhojan, ilaaj aur sneha pahunchate hain. Aapka saath, unki suraksha!</p>
+</section>
 
-<div class="section images">
-  <img src="images/puppy1.jpg" alt="Puppy Eating">
-  <img src="images/straydog.jpg" alt="Stray Dog">
-  <img src="images/puppiesroad.jpg" alt="Puppies on Road">
-  <img src="images/cow_water.jpg" alt="Cow Drinking Water">
-  <img src="images/dog_bowl.jpg" alt="Dog Eating">
-  <img src="images/bird_bowl.jpg" alt="Birds Drinking">
-  <img src="images/man_feeding.jpg" alt="Man Feeding Dogs">
-  <img src="images/puppy_milk.jpg" alt="Puppy Drinking Milk">
-  <img src="images/sad_dog.jpg" alt="Sad Dog">
-</div>
+<section id="how-to-help">
+  <h2>How You Can Help</h2>
+  <p>🫶 Daan dijiyega — chahe ₹11 ho ya ₹1100</p>
+  <p>🌱 Volunteer ban sakte hain seva mein</p>
+  <p>📢 Apne parivar aur doston ko batayein</p>
+</section>
+
+<section id="donate" class="donate-section">
+  <h2>Donate Now</h2>
+  <p><strong>UPI ID:</strong> 7357897775@ptyes</p>
+  <img src="assets/img/upi-qr-code.png" alt="UPI QR Code" />
+  <p style="margin-top: 10px; color: #555;">Bank: State Bank of India</p>
+  <a class="btn" href="upi://pay?pa=7357897775@ptyes&pn=JeevMitra&cu=INR">Pay Now via UPI</a>
+  <p style="margin-top: 30px; color: #666;">
+    Aapka har daan ek kahani hai. <br />
+    Daan dene ke baad apni photo WhatsApp karein — hum usse site par dikhayenge!
+  </p>
+  <p>
+    📸 WhatsApp: <a href="https://wa.me/91XXXXXXXXXX">Click here to send photo</a>
+  </p>
+</section>
+
+<section class="gallery-section">
+  <h2>Karuna ki Dastaan (Gallery)</h2>
+  <div class="gallery">
+    <img src="assets/img/dog1.jpg" alt="Street Dog Drinking Water">
+    <img src="assets/img/dog2.jpg" alt="Dog Eating Food">
+    <img src="assets/img/dog3.jpg" alt="Dog Being Treated">
+    <img src="assets/img/dog4.jpg" alt="Dog Resting Peacefully">
+    <img src="assets/img/dog5.jpg" alt="Dog Being Fed">
+    <img src="assets/img/dog6.jpg" alt="Dog Drinking Clean Water">
+    <img src="assets/img/dog7.jpg" alt="Dog Playing">
+    <img src="assets/img/dog8.jpg" alt="Dog Care">
+    <img src="assets/img/dog9.jpg" alt="Happy Dog">
+    <img src="assets/img/dog10.jpg" alt="Dog with Donor">
+  </div>
+</section>
+
+<section id="donors">
+  <h2>🙏 Our Donors</h2>
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOs0bW8g15pu_vWDdi4t_hzzQ3XD__N3w0rS2lzUT6bMb_HYiHDGUkN3iEUt7WTDkNlsufJ6XnXwpK/pubhtml?widget=true&amp;headers=false" width="100%" height="400"></iframe>
+</section>
 
 <footer>
-  <p>© 2025 Street Dog Seva | Designed with ❤️ for Animal Lovers</p>
+  <p>© 2025 JeevMitra.org | Email: <a href="mailto:jeevmitra@seva.org">jeevmitra@seva.org</a></p>
 </footer>
 
 </body>
