--- a/index.html
+++ b/index.html
@@ -141,27 +141,27 @@
 
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px;">
     <div style="text-align:center;">
-      <img src="images/birdA.jpg" width="200" alt="जलधारा जीवन की"><br>
+      <img src="birdA.jpg" width="200" alt="जलधारा जीवन की"><br>
       <strong>जलधारा जीवन की</strong><br>
       <em>एक कटोरी पानी – हज़ारों पंखों को राहत</em>
     </div>
     <div style="text-align:center;">
-      <img src="images/birdB.jpg" width="200" alt="छोटा तिनका, बड़ा सहारा"><br>
+      <img src="birdB.jpg" width="200" alt="छोटा तिनका, बड़ा सहारा"><br>
       <strong>छोटा तिनका, बड़ा सहारा</strong><br>
       <em>जहां दाना रखा, वहां दुआ बस गई</em>
     </div>
     <div style="text-align:center;">
-      <img src="images/BirdC.jpg" width="200" alt="साथी पंखों वाले"><br>
+      <img src="birdC.jpg" width="200" alt="साथी पंखों वाले"><br>
       <strong>साथी पंखों वाले</strong><br>
       <em>प्रकृति के सबसे प्यारे मेहमान – हमारे आंगन में</em>
     </div>
     <div style="text-align:center;">
-      <img src="images/birdD.png" width="200" alt="बर्तन नहीं, जीवनदान"><br>
+      <img src="birdD.png" width="200" alt="बर्तन नहीं, जीवनदान"><br>
       <strong>बर्तन नहीं, जीवनदान</strong><br>
       <em>हर बूँद एक वरदान है इस गर्मी में</em>
     </div>
     <div style="text-align:center;">
-      <img src="images/birdE.png" width="200" alt="बालक का परिंदों से प्रेम"><br>
+      <img src="birdE.png" width="200" alt="बालक का परिंदों से प्रेम"><br>
       <strong>बालक का परिंदों से प्रेम</strong><br>
       <em>मासूम हाथों से बड़ी सेवा की शुरुआत</em>
     </div>
@@ -175,17 +175,17 @@
 
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px;">
     <div style="text-align:center;">
-      <img src="images/cowF.jpg" width="200" alt="माँ की ममता"><br>
+      <img src="cowF.jpg" width="200" alt="माँ की ममता"><br>
       <strong>माँ की ममता</strong><br>
       <em>गौमाता की मूक प्रार्थना – आपकी दया से पूरी होती है</em>
     </div>
     <div style="text-align:center;">
-      <img src="images/cowG.png" width="200" alt="बचपन की बोतल"><br>
+      <img src="cowG.png" width="200" alt="बचपन की बोतल"><br>
       <strong>बचपन की बोतल</strong><br>
       <em>एक बूँद दूध – एक नन्हा जीवन मुस्कुराता है</em>
     </div>
     <div style="text-align:center;">
-      <img src="images/cowH.jpg" width="200" alt="बछड़े की उम्मीद"><br>
+      <img src="cowH.jpg" width="200" alt="बछड़े की उम्मीद"><br>
       <strong>बछड़े की उम्मीद</strong><br>
       <em>प्यासी आँखें, आपके प्रेम से मिली राहत</em>
     </div>
@@ -200,14 +200,14 @@
 
     <!-- Story 1 -->
     <div style="flex:1; min-width:300px;">
-      <img src="images/birdE.png" alt="Bird Story" style="width:100%; border-radius:15px; box-shadow:0 4px 8px rgba(0,0,0,0.2);">
+      <img src="birdE.png" alt="Bird Story" style="width:100%; border-radius:15px; box-shadow:0 4px 8px rgba(0,0,0,0.2);">
       <h3 style="color:#2e8b57;">🐦 12 साल का बालक – ‘पानी वाला दोस्त’</h3>
       <p>राजस्थान के एक गाँव में 12 वर्षीय आयुष हर सुबह अपनी छत पर मिट्टी के बर्तन में पानी और चावल डालता है। पिछले 3 सालों से वह गर्मी में परिंदों की सेवा कर रहा है। उसकी छत पर अब रोज़ 50 से अधिक चिड़ियाँ आती हैं। उसका कहना है – <em>“अगर हम उनके लिए नहीं सोचेंगे, तो कौन सोचेगा?”</em></p>
     </div>
 
     <!-- Story 2 -->
     <div style="flex:1; min-width:300px;">
-      <img src="images/cowF.jpg" alt="Cow Story" style="width:100%; border-radius:15px; box-shadow:0 4px 8px rgba(0,0,0,0.2);">
+      <img src="cowF.jpg" alt="Cow Story" style="width:100%; border-radius:15px; box-shadow:0 4px 8px rgba(0,0,0,0.2);">
       <h3 style="color:#8b0000;">🐄 बुज़ुर्ग दंपत्ति की गौसेवा</h3>
       <p>जयपुर के पास रहने वाले 68 वर्षीय श्रीमती शांति देवी और उनके पति ने अपने जीवन की बचत से एक छोटी सी गौशाला बनाई। आज वे 15 बीमार और बेसहारा गायों की देखभाल कर रहे हैं। सुबह 5 बजे से लेकर रात 9 बजे तक वे खुद उनकी सेवा करते हैं। उनका कहना है – <em>“गौमाता की सेवा ही हमारी असली पूजा है।”</em></p>
     </div>
