--- a/index.html
+++ b/index.html
@@ -110,9 +110,22 @@
   <img src="scanner.jpg" alt="UPI QR Code">
 </section>
 
-<section>
-  <h2 style="text-align:center;">📋 हमारे दानदाता</h2>
+</section><h2 style="text-align:center;">📋 हमारे दानदाता</h2>
+  <p style="text-align:center;">आप सभी का सहयोग हमारे लिए अमूल्य है।</p>
+
+  <div style="text-align: center; margin-bottom: 20px;">
+    <img src="qr.png" alt="UPI QR" width="200">
+    <p><strong>UPI ID:</strong> 7357897775@ptyes</p>
+    <button onclick="navigator.clipboard.writeText('7357897775@ptyes'); alert('UPI ID copied!');">
+      कॉपी करें
+    </button>
+  </div>
+
   <div style="display: flex; justify-content: center;">
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJWXYXfqCZX-auYdFh4Vt5gnPlVlYTgk1E7HkBHE2xOD2bV43uZ1QYDC9R4E_jTt5/pubhtml?widget=true&amp;headers=false" width="1000" height="500"></iframe>
+  </div>
+</section>
+
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJWYXXfqCZx-auYdFN4vt5gnPWlYTGktcSLeD9xgtNAaZ_eP-CH_5zHO458ZueH1G0PC9cECQs2ebS/pubhtml?widget=true&amp;headers=false"
       width="1000" height="500">
     </iframe>
