--- a/index.html
+++ b/index.html
@@ -122,14 +122,12 @@
   </div>
 
   <div style="display: flex; justify-content: center;">
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJWXYXfqCZX-auYdFh4Vt5gnPlVlYTgk1E7HkBHE2xOD2bV43uZ1QYDC9R4E_jTt5/pubhtml?widget=true&amp;headers=false" width="1000" height="500"></iframe>
-  </div>
-</section>
+    <div style="display: flex; justify-content: center;">
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-.../pubhtml" 
+          width="1000" height="500">
+  </iframe>
+</div>
 
-    
-      width="1000" height="500">
-    </iframe>
-  </div>
 </section>
 
 <section>
