--- a/index.html
+++ b/index.html
@@ -120,16 +120,14 @@
       कॉपी करें
     </button>
   </div>
-
+<section>
+  <h2 style="text-align:center;">📋 हमारे दानदाता</h2>
   <div style="display: flex; justify-content: center;">
-    <div style="display: flex; justify-content: center;">
-  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-.../pubhtml" 
-          width="1000" height="500">
-  </iframe>
-</div>
-
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJWXYxfqCZX-auYdFh4Vt5gnPlVvITgkIE7kHlBME2k0D2bV43Uz1DYCP9R4ozEw/pubhtml?widget=true&amp;headers=false" 
+            width="1000" height="500">
+    </iframe>
+  </div>
 </section>
-
 <section>
   <h2 style="text-align:center;">💖 Real JeevMitra Stories</h2>
   <div class="image-grid">
