--- a/index.html
+++ b/index.html
@@ -121,9 +121,13 @@
     </button>
   </div>
 <section>
+  <section>
   <h2 style="text-align:center;">📋 हमारे दानदाता</h2>
-  https://docs.google.com/spreadsheets/d/e/2PACX-1vTJWYXXfqCZx-auYdFN4vt5gnPWlYTGktcSLeD9xgtNAaZ_eP-CH_5zHO458ZueH1G0PC9cECQs2ebS/pubhtml
-  <h2 style="text-align:center;">💖 Real JeevMitra Stories</h2>
+  <div style="display: flex; justify-content: center;">
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJWYXXfqCZx-auYdFN4vt5gnPWlYTGktcSLeD9xgtNAaZ_eP-CH_5zHO458ZueH1G0PC9cECQs2ebS/pubhtml" width="1000" height="500"></iframe>
+  </div>
+</section>
+
   <div class="image-grid">
     <div><img src="dog1.jpg"><p>Tommy: इलाज से नई जिंदगी</p></div>
     <div><img src="dog2.jpg"><p>Bird Pots: गर्मी में जीवनदायिनी सेवा</p></div>
