--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
     राजस्थान की यह भूमि जीवों के लिए अपना सर्वस्व समर्पित करने वालों की भूमि है।
   </p>
   <div style="text-align: center; margin-top: 20px;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Amrita_devi_bishnoi.jpg/800px-Amrita_devi_bishnoi.jpg" alt="Amrita Devi" style="max-width: 400px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  </div>
+    <img src="amrita.jpg" alt="Amrita Devi" width="300" style="border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+    </div>
 </section>
 
 <footer>
-  © 2025 JeevMitra | सेवा ही धर्म है | Developed with ❤ by JeevPremi Team
+  © 2025 JeevMitra | सेवा ही धर्म है | Developed with ❤ by Bithu ji sinthal Team
 </footer>
 
 </body>
