--- a/index.html
+++ b/index.html
@@ -238,11 +238,10 @@
     <img src="amrita.jpg" alt="Amrita Devi" width="300" style="border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
     </div>
 </section>
-
-<footer>
-  © 2025 JeevMitra | सेवा ही धर्म है | Developed with ❤ by Bithu ji sinthal Team
+<footer style="text-align: center; padding: 20px; background: #f5f5f5; font-size: 14px;">
+  🤝 यह सेवा वेबसाइट <strong>Naresh Bithu</strong> और <strong>ChatGPT</strong> द्वारा मिलकर बनाई गई है।  
+  <br>🐾 जीवनदायिनी सेवा… हमेशा के लिए।
 </footer>
-
 </body>
 </html>
 
