--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
+<!-- ✅ AI Pro-level SEO Tags -->
+<title>JeevMitra – जानवरों और पक्षियों की सेवा के लिए समर्पित</title>
+
+<meta name="description" content="JeevMitra एक सेवा प्लेटफॉर्म है जो स्ट्रीट डॉग्स, पक्षियों और ज़रूरतमंद जानवरों की मदद के लिए समर्पित है। डोनेशन से जान बचाइए, पानी, खाना और इलाज दीजिए।">
+<meta name="keywords" content="JeevMitra, animal donation India, dog help, bird water bowl, dog food seva, animal care, NGO for animals, jeev seva, dog shelter support, donate for animals">
+<meta name="robots" content="index, follow">
+<meta name="author" content="Naresh Bithu & ChatGPT AI">
+
+<!-- 📲 Social Media Sharing -->
+<meta property="og:title" content="JeevMitra – जानवरों की सेवा में मानवता">
+<meta property="og:description" content="Street dogs, birds & animals को बचाने के लिए donate करें। JeevMitra एक जन-सेवा मिशन है – मदद करें, जीवन बचाएं।">
+<meta property="og:url" content="https://jeevmitra.github.io/jeevmitra-site/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://jeevmitra.github.io/jeevmitra-site/images/dog5.jpg">
+
+<!-- 🐦 Twitter card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="JeevMitra – जानवरों की सेवा का अभियान">
+<meta name="twitter:description" content="Street animals और पक्षियों की सेवा करें। दान करें और बदलाव लाएं।">
+<meta name="twitter:image" content="https://jeevmitra.github.io/jeevmitra-site/images/dog5.jpg">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JeevMitra - पशु सेवा</title>
