--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="hi">
-<head>
+<head><!-- 🔥 JeevMitra SEO Booster Meta Tags -->
+<meta name="keywords" content="animal donation, dog seva, street dogs help, JeevMitra, cow seva, birds water seva, real animal care, donate for animals India, real animal seva platform">
+<meta name="description" content="JeevMitra is India's most real and trusted platform for animal seva. Donate to feed stray dogs, cows, and birds with love.">
+<meta name="author" content="JeevMitra & ChatGPT AI">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://jeevmitra.github.io/jeevmitra-site/">
 <!-- ✅ AI Pro-level SEO Tags -->
 <title>JeevMitra – जानवरों और पक्षियों की सेवा के लिए समर्पित</title>
 
