--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html lang="hi">
-<head><!-- 🔥 JeevMitra SEO Booster Meta Tags -->
+<head> <!-- 🎆 Fireworks JS -->
+<script src="https://cdn.jsdelivr.net/npm/fireworks-js@2/dist/fireworks.js"></script>
+
+<!-- 🌸 Petal Rain CSS -->
+<link href="https://unpkg.com/petalfall@1.0.2/lib/style.css" rel="stylesheet">
+
+<!-- ❤️ Heart Animation CSS -->
+<style>
+  .floating-heart {
+    position: absolute;
+    animation: floatHeart 5s ease-in-out forwards;
+    font-size: 24px;
+    z-index: 9999;
+    color: #ff4d6d;
+  }
+
+  @keyframes floatHeart {
+    0% { opacity: 0; transform: translateY(0); }
+    50% { opacity: 1; transform: translateY(-100px); }
+    100% { opacity: 0; transform: translateY(-200px); }
+  }
+</style> <!-- 🔥 JeevMitra SEO Booster Meta Tags -->
 <meta name="keywords" content="animal donation, dog seva, street dogs help, JeevMitra, cow seva, birds water seva, real animal care, donate for animals India, real animal seva platform">
 <meta name="description" content="JeevMitra is India's most real and trusted platform for animal seva. Donate to feed stray dogs, cows, and birds with love.">
 <meta name="author" content="JeevMitra & ChatGPT AI">
@@ -30,7 +51,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JeevMitra - पशु सेवा</title>
   <style>
-    body {
+    body <!-- 🎆 Fireworks Canvas -->
+<canvas id="fireworks-canvas" style="position:fixed;width:100vw;height:100vh;top:0;left:0;z-index:9999;pointer-events:none;"></canvas>
+
+<!-- 🌸 Petal Rain -->
+<div id="petals" class="pf-container" style="z-index:9998;"></div>
+
+<!-- 🔊 Welcome Sound -->
+<audio id="entry-sound" autoplay>
+  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c5d3a1cd87.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+  // Fireworks setup
+  const fireCanvas = document.getElementById('fireworks-canvas');
+  const fireworks = new Fireworks.default(fireCanvas, {
+    autoresize: true,
+    opacity: 0.9,
+    acceleration: 1.08,
+    friction: 0.95,
+    gravity: 1.6,
+    particles: 80,
+    trace: 4,
+    explosion: 6,
+    intensity: 40,
+    traceSpeed: 5,
+    hue: { min: 0, max: 360 },
+    delay: { min: 15, max: 35 },
+    rocketsPoint: { min: 0, max: 100 }
+  });
+  fireworks.start();
+
+  // Petal Rain
+  const petals = document.getElementById("petals");
+  for (let i = 0; i < 40; i++) {
+    const petal = document.createElement("div");
+    petal.className = "pf-petal";
+    petal.style.left = `${Math.random() * 100}vw`;
+    petal.style.animationDelay = `${Math.random() * 3}s`;
+    petals.appendChild(petal);
+  }
+
+  // Floating ❤️ hearts
+  for (let i = 0; i < 15; i++) {
+    const heart = document.createElement("div");
+    heart.className = "floating-heart";
+    heart.textContent = "❤️ Donate";
+    heart.style.left = `${Math.random() * 90 + 5}vw`;
+    heart.style.top = `${Math.random() * 80 + 10}vh`;
+    heart.style.animationDelay = `${Math.random() * 3}s`;
+    document.body.appendChild(heart);
+  }
+
+  // Auto stop all after 7 sec
+  setTimeout(() => {
+    fireworks.stop();
+    fireCanvas.style.display = "none";
+    petals.style.display = "none";
+    document.querySelectorAll('.floating-heart').forEach(h => h.remove());
+    document.getElementById('entry-sound').pause();
+  }, 7000);
+</script> {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-image: url('dog8.jpg');
