--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="hi">
 <head><!-- 🎆 Fireworks JS -->
 <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2/dist/fireworks.js"></script>
-
-<!-- 🌸 Petal Rain CSS -->
-<link href="https://unpkg.com/petalfall@1.0.2/lib/style.css" rel="stylesheet">
-
 <!-- ❤️ Heart Animation CSS -->
 <style>
   .floating-heart {
@@ -13,7 +9,7 @@
     animation: floatHeart 5s ease-in-out forwards;
     font-size: 24px;
     z-index: 9999;
-    color: #ff4d6d;
+    color: #ff4dd6;
   }
 
   @keyframes floatHeart {
@@ -51,7 +47,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JeevMitra - पशु सेवा</title>
   <style>
-    <body><div class="floating-heart">❤️</div><!-- 🎆 Fireworks Canvas -->
+    <body> <!-- 🎆 Fireworks Canvas -->
 <canvas id="fireworks-canvas" style="position:fixed;width:100vw;height:100vh;top:0;left:0;z-index:1;pointer-events:none;"></canvas>
 
 <!-- 🌸 CSS-based Petal Rain (NO images) -->
