--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2/dist/fireworks.js"></script>
 <!-- ❤️ Heart Animation CSS -->
 <style>
-  .floating-heart {
+  floating-heart {
     position: absolute;
     animation: floatHeart 5s ease-in-out forwards;
     font-size: 24px;
     z-index: 9999;
-    color: #ff4dd6;
-  }
+    color: #ff4dd6;}
 
   @keyframes floatHeart {
     0% { opacity: 0; transform: translateY(0); }
     50% { opacity: 1; transform: translateY(-100px); }
     100% { opacity: 0; transform: translateY(-200px); }
-  }
+  
 </style> <!-- 🔥 JeevMitra SEO Booster Meta Tags -->
 <meta name="keywords" content="animal donation, dog seva, street dogs help, JeevMitra, cow seva, birds water seva, real animal care, donate for animals India, real animal seva platform">
 <meta name="description" content="JeevMitra is India's most real and trusted platform for animal seva. Donate to feed stray dogs, cows, and birds with love.">
